# LLMOps-Multi-AI-Agent

./: Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  setup.py
app/: README.md  main.py
app/backend/: README.md  api.py
app/common/: README.md
app/config/: README.md  settings.py
app/core/: README.md  ai_agent.py
app/frontend/: README.md  ui.py
custom_jenkins/: Dockerfile  README.md
